grammar.js
    document: ($) =>
      seq(
        repeat(prec(10, choice($._blank_lines, $._comments))),
        choice(
          optional(
            seq(
              $.document_header,
              optional(seq($._blank_lines, $.document_body)),
            ),
          ),
          optional($.document_body),
        ),
      ),

    // ------------------------------------------------------------------------

    // Header
    //
    // 1. Document Title
    // 2. (optional) Comments
    // 3. (optional) Authors or Authors + (Comments) + Revision
    // 4. (optional) Document Attributes
    //
    document_body: ($) =>
      repeat1(
        choice(
          $._section,
          // alias(prec.right(repeat1($._block_not_section)), $.section),
          prec.right(repeat1($._block_not_section)),
        ),
      ),

    // ------------------------------------------------------------------------

    // Document Attributes
    // - https://docs.asciidoctor.org/asciidoc/latest/attributes/document-attributes/
    //
    // TODO:
    // - handling of incorrect attributes (e.g. missing last `:`)
    // - inline attributes `{...}`
    //
    // _attribute: ($) => choice($.attribute /*, $.no_attribute*/),
    element_attributes: ($) => $._attribute_list,

    // _attribute_list: (_) => token(seq("[", /[^\]\r\n]*/, "]", /\r?\n/)),

    _attribute_list: ($) =>
      seq(
        "[",
        optional(
          seq($._attribute_unparsed, repeat(seq(",", $._attribute_unparsed))),
        ),
        "]",
        // FIX: Problem: `[attribute]...` is recognized as an element_attribute,
        //      but should be an inline node.
        /[ \t]*/, // HACK: Workaround for `[attribute]...` / `[attribute] ...`
        $._newline,
      ),
    _section: ($) =>
      choice(
        $.part,
        $.section_level1,
        $.section_level2,
        $.section_level3,
        $.section_level4,
        $.section_level5,
      ),

    _block_not_section: ($) =>
      prec.left(choice($._block_content, $.catch_unresolved)),

    context: ($) =>
      seq(
        // repeat1(choice($.title, $.element_attributes)),
        repeat(choice($.title, $.element_attributes)),
        choice($.paragraph, $.list, $.table, $.macro, $._block),
      ),
    _comments: ($) => prec.right(repeat1($.comment)),

    // One comment type
    title: ($) => seq(".", $._line_start_without_space),

    // ------------------------------------------------------------------------

    // Blocks
    //
    // TODO:
    // - Source Code Block as a special Listing Block with a language attribute
    // - Also Markdown ``` Source Code Block?
    //
    _block: ($) =>
      seq(
        // optional($.element_attributes),
        choice(
          $.open_block,
          $.listing_block,
          $.literal_block,
          $.sidebar_block,
          $.example_block,
          $.pass_block,
        ),
      ),

    // ---------------------------------

    // Open Block (only block style)
    listing_block: ($) =>
      seq(
        choice($._listing_block, $._listing_block_style),
        repeat($.listing_callout),
      ),

    // Callout
    _listing_block: ($) =>
      seq(
        optional($.source_attributes),
        alias($.listing_block_marker, $.listing_block_marker_start),
        optional($.listing_block_content),
        alias($.listing_block_marker, $.listing_block_marker_end),
      ),
    source_attributes: ($) =>
      seq(
        "[",
        alias("source", $.source_attribute_name), //optional("source"),
        optional(
          seq(
            ",",
            optional($._white_space),
            field("language", $.attribute_name),
            optional($._white_space),
            repeat(seq(",", /[^,\]\n]*/)), // catch unresolved attributes
          ),
        ),
        "]",
        $._newline,
      ),

    // Open Block or Paragraph style
    _listing_block_style: ($) =>
      seq(
        alias($._listing_attributes, $.element_attributes),
        $._newline,
        choice($.open_block, $.paragraph),
      ),
    paragraph: ($) => $._lines,

    // ------------------------------------------------------------------------

    // Lists
    // - https://docs.asciidoctor.org/asciidoc/latest/lists/unordered/
    //
    // TODO:
    // - [x] Identify a simple list line
    // - [x] Don't recognize `+**.*` as list marker
    // - [x] List with list items
    // - [ ] Nested list items context

    list: ($) => prec.right(repeat1($.list_item)),

    list_item: ($) => seq($.list_item_marker, $.list_item_content),

    list_item_marker: (_) =>
      token(seq(choice(/[-]+/, /[*]+/, /[.]+/, /[0-9]+./), " ")),
    // list_item_marker: (_) =>
    //   token(seq(/[ ]*/, choice(/[-]+/, /[*]+/, /[.]+/), " ")),

    list_item_content: ($) =>
      seq($._lines, repeat($._list_continuation_content)),

    _list_continuation_content: ($) =>
      seq(
        $.list_continuation_marker,
        choice(
          alias($.context_without_list, $.context),
          $.admonition,
          $.id_attributes,
        ),
      ),

    table: ($) =>
      seq(
        $.table_marker,
        $._newline,
        repeat(choice(seq(repeat1($.table_cell), $._newline), $._blank_line)),
        $.table_marker,
        $._newline,
      ),

    table_cell: ($) =>
      seq(
        $.table_cell_marker,
        repeat($._white_space),
        /[^|\n]*/,
        repeat($._white_space),
      ),

    table_marker: (_) => "|===",
    table_cell_marker: ($) => seq($._table_cell_marker_operator, "|"),
    _table_cell_marker_operator: (_) => /[0-9.+*a<^>]*/,

    // ------------------------------------------------------------------------

    // Other body parts (blocks)
    //

    // ------------------------------------------------------------------------

    // Catches the unresolved rest
    _lines: ($) => prec.right(repeat1($._line)),

    inline: ($) => repeat1($._char),

    _line_start_without_space: ($) =>
      seq(alias($._inline_start_without_space, $.inline), $._newline),
    _blank_lines: ($) => repeat1($._blank_line),
    _blank_line: ($) => seq($._newline),

    // FIX: Currently only a workaround for the problem with the ` +` line continuation.
    _char: (_) => /[^\n]/,

    _newline: (_) => /\r?\n/,
    // _newline: (_) => /[ \t]*\r?\n/,
    _white_space: (_) => /[ \t]+/, // TODO: Use instead of `" "`?
