test/corpus/21_titles.txt
==================|||
Title
==================|||

.Title

---|||

(document
  (document_body
    (title
      (inline))))

==================|||
Title with whitespaces
==================|||

.Title with whitespaces

---|||

(document
  (document_body
    (title
      (inline))))

==================|||
Title for Paragraph
==================|||

.Title for Paragraph
Lorem ipsum dolor sit amet, qui minim
labore adipisicing minim sint.

---|||

(document
  (document_body
    (context
      (title
        (inline))
      (paragraph
        (inline)
        (inline)))))

==================|||
Title for List
==================|||

.Title for List
* item
* item

---|||

(document
  (document_body
    (context
      (title
        (inline))
      (list
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))))))

==================|||
Title for Listing
==================|||


.Title for Paragraph
[source]
----
Lorem ipsum dolor sit amet, qui minim
labore adipisicing minim sint.
----

---|||


(document
  (document_body
    (context
      (title
        (inline))
      (listing_block
        (source_attributes
          (source_attribute_name))
        (listing_block_marker_start)
        (listing_block_content)
        (listing_block_marker_end)))))
