test/corpus/26_paragraphs.txt
==================
Praragraph
==================

Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.

---

(document
  (document_body
    (context
      (paragraph
        (inline)))))

==================
Praragraph 2
==================

Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.

---

(document
  (document_body
    (context
      (paragraph
        (inline)
        (inline)))))

==================
Paragraphs
==================

Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.

Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.

---

(document
  (document_body
    (context
      (paragraph
        (inline)))
    (context
      (paragraph
        (inline)))))

==================
Paragraphs 2

:error
==================

A===

===A

---

(document
  (document_body
    (context
      (paragraph
        (inline)))
    (context
      (paragraph
        (inline)))))
