test/corpus/32_tables.txt
==================|||
Tables (basic)
==================|||

|===
| Cell in column 1, row 1 | Cell in column 1, row 1
|===

---

(document
  (document_body
    (context
      (table
        (table_marker)
        (table_cell
          (table_cell_marker))
        (table_cell
          (table_cell_marker))
        (table_marker)))))

==================|||
Tables (basic)
==================|||

[cols="1,1"]
|===
|Cell in column 1, row 1
|Cell in column 2, row 1

|Cell in column 1, row 2
|Cell in column 2, row 2

|Cell in column 1, row 3
|Cell in column 2, row 3
|===

---|||

(document
  (document_body
    (context
      (element_attributes)
      (table
        (table_marker)
        (table_cell
          (table_cell_marker))
        (table_cell
          (table_cell_marker))
        (table_cell
          (table_cell_marker))
        (table_cell
          (table_cell_marker))
        (table_cell
          (table_cell_marker))
        (table_cell
          (table_cell_marker))
        (table_marker)))))
